[package]
name = "chimerai"
version = "0.1.0"
edition = "2021"
description = "A package for quickly building AI agents."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
pretty_assertions = "1.0"
